--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "^10.4.14",
     "clsx": "^2.1.1",
-    "framer-motion": "^10.18.0",
-    "next": "^13.4.12",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "framer-motion": "^11.13.5",
+    "next": "15.0.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
+    "@types/react": "19.0.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.1"
   }
 }
